run w/o maven