@@ -20,11 +20,15 @@ To run this project, you will need the following:
 
 ### Installation
 1. Clone/Download the repository.
-2. Build the project using maven.
+2. Build the project using maven.(Skip this, if you don't have maven)
 ```
 mvn clean install
 ```
-3. To run the application, use the following command:
+4. You don't have maven, download a zip file from [here](https://github.com/omidp/store/releases/download/1.0/store.zip), change the extension to jar and execute following command.
+```
+java --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED -jar store.jar
+```
+5. To run the application, use the following command:
 ```
 ./run.sh
 ```
